--- a/Stargazer.Extensions.Newtonsoft.Json.StrictContract/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
+++ b/Stargazer.Extensions.Newtonsoft.Json.StrictContract/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
@@ -7,6 +7,7 @@
     <Company></Company>
     <Product></Product>
     <Description></Description>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
