--- a/test/Stargazer.Extensions.Newtonsoft.Json.StrictContract.Tests.csproj
+++ b/test/Stargazer.Extensions.Newtonsoft.Json.StrictContract.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Stargazer.Extensions.Newtonsoft.Json.StrictContract\Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj" />
+    <ProjectReference Include="..\src\Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj" />
   </ItemGroup>
 
 </Project>
