--- a/src/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
+++ b/src/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
@@ -8,6 +8,7 @@
     <Product></Product>
     <Description></Description>
     <Version>1.1.0</Version>
+    <RepositoryUrl>https://github.com/stargazer-w/Newtonsoft.Json.StrictContract</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
