升级Namotion.Reflection库,修正命名空间与项目名称一致

--- a/test/Stargazer.Extensions.Newtonsoft.Json.StrictContract.Tests.csproj
+++ b/test/Stargazer.Extensions.Newtonsoft.Json.StrictContract.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
+    <RootNamespace>Stargazer.Extensions.Newtonsoft.Json.StrictContract</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
