更新版本号到1.2.0

--- a/src/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
+++ b/src/Stargazer.Extensions.Newtonsoft.Json.StrictContract.csproj
@@ -7,9 +7,17 @@
     <Company></Company>
     <Product></Product>
     <Description></Description>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <RepositoryUrl>https://github.com/stargazer-w/Newtonsoft.Json.StrictContract</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Namotion.Reflection" Version="2.0.3" />
